Fix alignment of the last card

--- a/src/FrontendBundle/Resources/public/css/frontend.css
+++ b/src/FrontendBundle/Resources/public/css/frontend.css
@@ -4094,6 +4094,10 @@ p.text-muted a:focus {
     .card:nth-child(3n) {
         margin-right: 0;
     }
+
+    .card:last-child {
+        margin-right: 0;
+    }
 }
 
 .card span {
